# Pokerbot

./: .gitmodules  CMakeLists.txt  GuiWindows.hpp  Interfaces.hpp  LICENSE.md  Makefile  ObserverPattern.txt  PokerbotArchitecture.graphml  README.md  azure-pipelines.yml  codecov.yml  conanfile.py  conanfile.txt  config.ini  config_linux.ini  config_windows.ini  imgui.ini  main.cpp  vs15_debug
app/: CMakeLists.txt
app/include/: DataStructures.hpp  Interfaces.hpp
app/src/: main.cpp
capture/: CMakeLists.txt
capture/include/: CameraController.h  CameraController.hpp  CameraSettings.h  CameraSettings.hpp  CaptureDetectOutput.hpp  CaptureGuiInput.h  CaptureGuiInput.hpp  CaptureOutput.h  CaptureOutput.hpp  ICameraDevice.hpp  Image.h  OpenCvCam.hpp
capture/include/interfaces/: CaptureDetectInterface.hpp  ICameraController.hpp  ICameraDevice.hpp  ICaptureGui.hpp
capture/src/: CameraController.cpp
cmake/: Documentation.cmake
conan_configs/: gcc7_debug  gcc7_release  gcc8_debug  gcc8_release  gcc9_debug  gcc9_release  vs15_debug  vs15_release  vs17_release  vs19_debug  vs19_release
detection/: CMakeLists.txt
detection/deprecated/: CardDetector.cpp  CardDetector.h  DetectGuiInput.hpp  ImProc.cpp
detection/include/: AssignCards.h  BaseCard.h  BufferManager.hpp  CameraControls.h  Capture.h  Card.h  Card.hpp  CardAssigner.hpp  CardAssigner_old.hpp  CardBuffer.h  CardBuffer.hpp  CardDetector.h  CardDetector.hpp  CardIdentifier.hpp  ContourFinder.hpp  CornerSorter.hpp  DataDetect.hpp  DetectCaptureInput.hpp  DetectGuiOutput.hpp  DetectPokerOutput.hpp  DetectionDataHandler.hpp  ICardDetector.hpp  ImProc.h  ImProcSettings.hpp  Image.h  Mapping.h  PerspectiveCorrector.hpp  TCoordsCalculator.hpp  TrainImage.h  TrainImage.hpp
detection/include/interfaces/: DetectPokerInterface.hpp  ICardDetector.hpp  IDetectCapture.hpp  IDetectGui.hpp  IDetectionDataHandler.hpp
detection/src/: AssignCards.cpp  BufferManager.cpp  Capture.cpp  Card.cpp  CardAssigner.cpp  CardBuffer.cpp  CardDetector.cpp  CardIdentifier.cpp  ContourFinder.cpp  CornerSorter.cpp  DetectionDataHandler.cpp  ImProc.cpp  PerspectiveCorrector.cpp  TCoordsCalculator.cpp  TrainImage.cpp
docs/: Doxyfile.in  index.html
doxygen/: Doxyfile.in
gui/: CMakeLists.txt
gui/deprecated/: CaptureTrainImg.cpp  GuiCaptureInput.hpp  GuiDetectionInput.hpp  GuiDetectionOutput.hpp  GuiPokerInput.hpp  GuiPokerOutput.hpp
gui/include/: BaseGUI.h  CaptureTrainImg.h  CaptureTrainImg.hpp  GUI.h  GUICaptureOutput.h  GuiCaptureIO.hpp  GuiCaptureInput.h  GuiCaptureInput.hpp  GuiCaptureOutput.hpp  GuiContext.h  GuiContext.hpp  GuiDetectionIO.hpp  GuiDetectionInput.hpp  GuiDetectionOutput.hpp  GuiPokerIO.hpp  IObserver.h  ISubject.h  ISubject.hpp  ImageDrawer.hpp  LayoutConfig.h  LayoutConfig.hpp  View.h
gui/include/interfaces/: GuiCaptureInterface.hpp  GuiDetectionInterface.hpp  GuiPokerInterface.hpp  IObserver.hpp  ISubject.hpp
gui/include/widgets/: AskForSaveWin.h  AskForSaveWin.hpp  Button.h  Button.hpp  CameraWin.h  CameraWinConfig.h  CardImageWin.h  CardImageWin.hpp  ControlsWin.h  IConstrainedInput.h  IWindow.h  IWindow.hpp  ImProcConfig.h  ImProcWin.h  ImProcWinConfig.h  ImageDrawer.h  ImageDrawer.hpp  Input.h  InputField.h  InputField.hpp  LayoutWin.h  LayoutWinConfig.h  LiveImageWin.h  LiveImageWin.hpp  MainMenuBar.hpp  MainWin.h  PokerGameWin.h  PokerGameWinConfig.h  PokerWin.hpp  RankImageWin.h  RankImageWin.hpp  SettingsWin.h  SettingsWin.hpp  Slider.h  Slider.hpp  SliderType.h  SuitImageWin.h  SuitImageWin.hpp  Widget.h  Window.h
gui/include/windows/: AskForSaveWin.hpp  CardImageWin.hpp  IWindow.hpp  LiveImageWin.hpp  NextRoundWin.hpp  PlaceBetWin.hpp  PokerWin.hpp  RankImageWin.hpp  SettingsWin.hpp  SuitImageWin.hpp  WhoWonWin.hpp
gui/src/: BaseGUI.cpp  CaptureTrainImg.cpp  GUI.cpp  GuiContext.cpp  ISubject.cpp  ImageDrawer.cpp  View.cpp
gui/src/interfaces/: ISubject.cpp
gui/src/widgets/: AskForSaveWin.cpp  CameraWin.cpp  CardImageWin.cpp  ControlsWin.cpp  IWindow.cpp  ImProcWin.cpp  ImageDrawer.cpp  LayoutWin.cpp  LiveImageWin.cpp  MainMenuBar.cpp  MainWin.cpp  PokerGameWin.cpp  PokerWin.cpp  RankImageWin.cpp  SettingsWin.cpp  SuitImageWin.cpp  Window.cpp
gui/src/windows/: AskForSaveWin.cpp  CardImageWin.cpp  LiveImageWin.cpp  NextRoundWin.cpp  PlaceBetWin.cpp  PokerWin.cpp  RankImageWin.cpp  SettingsWin.cpp  SuitImageWin.cpp  WhoWonWin.cpp
poker/: CMakeLists.txt
poker/Deprecated/: Simulation.cpp  Simulation.hpp
poker/deprecated/: GetRanking.cpp  GetRanking.h  Simulation.cpp  Simulation.h
poker/include/: CardAssigner.hpp  DataPoker.hpp  DecisionMaker.hpp  DecisionProcessor.hpp  Deck.h  Deck.hpp  Game.h  Game.hpp  GameSettings.hpp  GameStateController.hpp  GetRanking.h  Hand.h  Hand.hpp  HandBuilder.hpp  MoneyTracker.hpp  MonteCarlo.hpp  Player.hpp  PokerDetectInput.hpp  PokerGuiInput.hpp  PokerOutput.hpp  RankDeterminator.hpp  SimSettings.hpp  Simulation.h  Simulation.hpp  WinnerDeterminator.hpp
poker/include/interfaces/: IController.hpp  IPokerDetect.hpp  IPokerGui.hpp
poker/src/: CardAssigner.cpp  DecisionMaker.cpp  DecisionProcessor.cpp  Deck.cpp  Game.cpp  GameStateController.cpp  GetRanking.cpp  Hand.cpp  HandBuilder.cpp  MoneyTracker.cpp  MonteCarlo.cpp  RankDeterminator.cpp  Simulation.cpp  WinnerDeterminator.cpp
scr/: CardDetector.cpp
shared/: CMakeLists.txt
src/: CardDetector.cpp
templates/: CMakeLists.txt  (+2 more)
unit_tests/: CMakeLists.txt  TestCamController.cpp  TestCardBuffer.cpp  TestCardDetector.cpp  TestCornerSorter.cpp  TestDM.cpp  TestDetect.cpp  TestGame.cpp  TestGameSubClasses.cpp  TestHandDeckHandBuilder.cpp  TestPerspectiveCorrector.cpp  TestPoker.cpp  main
unit_tests/utilities/DetectCardlists/: buffer.txt
unit_tests/utilities/HelperClasses/: Capture_Mocks.hpp  Detect_Mocks.hpp  GameInternal.h  HelperClasses.hpp  Mocks.hpp  Poker_Mocks.hpp  SimulationInternal.h  SimulationInternal.hpp
unit_tests/utilities/HelperFunctions/: HelperFunctions.h  HelperFunctions.hpp
unit_tests/utilities/PokerHands/: AceLowStreet.txt  CompetingHands.txt  Rankings.txt  StartingHands.txt
(+52 files in other folders)
